# ReTiP

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  retip_manifest.toml
config/: retip_ctx.toml
src/: main.cpp  plume_renderer.cpp  plume_renderer.h  retip_app.h  triangle.frag.hlsl  triangle.vert.hlsl  video.frag.hlsl  video.vert.hlsl  video_hooks.cpp  video_hooks.h
src/Debug/: debug_hooks.toml  trace_hooks.cpp
src/Renderer/: retip_render_hooks.toml  video_hooks.cpp  video_hooks.h
